src/ffi.rs

#![allow(non_camel_case_types, non_snake_case, non_upper_case_globals, dead_code)]
/* automatically generated by rust-bindgen 0.70.1 */

#[repr(C)]
#[derive(Copy, Clone, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd)]
pub struct __BindgenBitfieldUnit<Storage> {
    storage: Storage,
}
impl<Storage> __BindgenBitfieldUnit<Storage> {
    #[inline]
    pub const fn new(storage: Storage) -> Self {
        Self { storage }
    }
}
impl<Storage> __BindgenBitfieldUnit<Storage>
where
    Storage: AsRef<[u8]> + AsMut<[u8]>,
{
    #[inline]
    pub fn get_bit(&self, index: usize) -> bool {
        debug_assert!(index / 8 < self.storage.as_ref().len());
        let byte_index = index / 8;
        let byte = self.storage.as_ref()[byte_index];
        let bit_index = if cfg!(target_endian = "big") {
            7 - (index % 8)
        } else {
            index % 8
        };
        let mask = 1 << bit_index;
        byte & mask == mask
    }
    #[inline]
    pub fn set_bit(&mut self, index: usize, val: bool) {
        debug_assert!(index / 8 < self.storage.as_ref().len());
        let byte_index = index / 8;
        let byte = &mut self.storage.as_mut()[byte_index];
        let bit_index = if cfg!(target_endian = "big") {
            7 - (index % 8)
        } else {
            index % 8
        };
        let mask = 1 << bit_index;
        if val {
            *byte |= mask;
        } else {
            *byte &= !mask;
        }
    }
    #[inline]
    pub fn get(&self, bit_offset: usize, bit_width: u8) -> u64 {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < self.storage.as_ref().len());
        debug_assert!((bit_offset + (bit_width as usize)) / 8 <= self.storage.as_ref().len());
        let mut val = 0;
        for i in 0..(bit_width as usize) {
            if self.get_bit(i + bit_offset) {
                let index = if cfg!(target_endian = "big") {
                    bit_width as usize - 1 - i
                } else {
                    i
                };
                val |= 1 << index;
            }
        }
        val
    }
    #[inline]
    pub fn set(&mut self, bit_offset: usize, bit_width: u8, val: u64) {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < self.storage.as_ref().len());
        debug_assert!((bit_offset + (bit_width as usize)) / 8 <= self.storage.as_ref().len());
        for i in 0..(bit_width as usize) {
            let mask = 1 << i;
            let val_bit_is_set = val & mask == mask;
            let index = if cfg!(target_endian = "big") {
                bit_width as usize - 1 - i
            } else {
                i
            };
            self.set_bit(index + bit_offset, val_bit_is_set);
        }
    }
}
pub const NEORADIO2_SETTINGS_PARTSIZE: u32 = 32;
pub const NEORADIO2_DESTINATION_BANK1: u32 = 1;
pub const NEORADIO2_DESTINATION_BANK2: u32 = 2;
pub const NEORADIO2_DESTINATION_BANK3: u32 = 4;
pub const NEORADIO2_DESTINATION_BANK4: u32 = 8;
pub const NEORADIO2_DESTINATION_BANK5: u32 = 16;
pub const NEORADIO2_DESTINATION_BANK6: u32 = 32;
pub const NEORADIO2_DESTINATION_BANK7: u32 = 64;
pub const NEORADIO2_DESTINATION_BANK8: u32 = 128;
pub const NEORADIO2_SUCCESS: u32 = 0;
pub const NEORADIO2_FAILURE: u32 = 1;
pub const NEORADIO2_ERR_WBLOCK: u32 = 2;
pub const NEORADIO2_ERR_INPROGRESS: u32 = 3;
pub const NEORADIO2_ERR_FAILURE: u32 = 4;
pub const NEORADIO2_MAX_DEVS: u32 = 8;
pub const _neoRADIO2_deviceTypes_NEORADIO2_DEVTYPE_TC: _neoRADIO2_deviceTypes = 0;
pub const _neoRADIO2_deviceTypes_NEORADIO2_DEVTYPE_DIO: _neoRADIO2_deviceTypes = 1;
pub const _neoRADIO2_deviceTypes_NEORADIO2_DEVTYPE_PWRRLY: _neoRADIO2_deviceTypes = 2;
pub const _neoRADIO2_deviceTypes_NEORADIO2_DEVTYPE_AIN: _neoRADIO2_deviceTypes = 3;
pub const _neoRADIO2_deviceTypes_NEORADIO2_DEVTYPE_AOUT: _neoRADIO2_deviceTypes = 4;
pub const _neoRADIO2_deviceTypes_NEORADIO2_DEVTYPE_CANHUB: _neoRADIO2_deviceTypes = 5;
pub const _neoRADIO2_deviceTypes_NEORADIO2_DEVTYPE_BADGE: _neoRADIO2_deviceTypes = 6;
pub const _neoRADIO2_deviceTypes_NEORADIO2_DEVTYPE_HOST: _neoRADIO2_deviceTypes = 255;
pub type _neoRADIO2_deviceTypes = ::std::os::raw::c_int;
pub use self::_neoRADIO2_deviceTypes as neoRADIO2_deviceTypes;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct _neoRADIO2frame_identifyResponse {
    pub serial_number: u32,
    pub manufacture_year: u16,
    pub manufacture_month: u8,
    pub manufacture_day: u8,
    pub device_type: u8,
    pub device_number: u8,
    pub device_bank: u8,
    pub firmwareVersion_major: u8,
    pub firmwareVersion_minor: u8,
    pub hardware_revMinor: u8,
    pub hardware_revMajor: u8,
    pub current_state: u8,
}
pub type neoRADIO2frame_identifyResponse = _neoRADIO2frame_identifyResponse;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _neoRADIO2frame_header {
    pub start_of_frame: u8,
    pub command_status: u8,
    pub device: u8,
    pub bank: u8,
    pub len: u8,
}
pub type neoRADIO2frame_header = _neoRADIO2frame_header;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _neoRADIO2frame {
    pub header: neoRADIO2frame_header,
    pub data: [u8; 64usize],
    pub crc: u8,
}
pub type neoRADIO2frame = _neoRADIO2frame;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _neoRADIO2frame_identify {
    pub device_type: u8,
    pub device_number: u8,
    pub bank_number: u8,
}
pub type neoRADIO2frame_identify = _neoRADIO2frame_identify;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_START: _neoRADIO2frame_commands = 1;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_IDENTIFY: _neoRADIO2frame_commands = 2;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_WRITE_DATA: _neoRADIO2frame_commands = 3;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_READ_DATA: _neoRADIO2frame_commands = 4;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_WRITE_SETTINGS: _neoRADIO2frame_commands = 5;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_READ_SETTINGS: _neoRADIO2frame_commands = 6;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_DEFAULT_SETTINGS: _neoRADIO2frame_commands = 7;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_READ_FAST: _neoRADIO2frame_commands = 8;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_TOGGLE_LED: _neoRADIO2frame_commands = 9;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_SET_BAUD: _neoRADIO2frame_commands = 10;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_READ_PCBSN: _neoRADIO2frame_commands = 16;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_READ_CAL: _neoRADIO2frame_commands = 32;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_WRITE_CAL: _neoRADIO2frame_commands = 33;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_WRITE_CALPOINTS: _neoRADIO2frame_commands = 34;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_STORE_CAL: _neoRADIO2frame_commands = 35;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_READ_CALPOINTS: _neoRADIO2frame_commands = 36;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_READ_CAL_INFO: _neoRADIO2frame_commands = 37;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_CLEAR_CAL: _neoRADIO2frame_commands = 38;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_PERF_STATS: _neoRADIO2frame_commands = 48;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_BL_WRITEBUFFER: _neoRADIO2frame_commands = 250;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_BL_WRITETOFLASH: _neoRADIO2frame_commands =
    251;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_BL_VERIFY: _neoRADIO2frame_commands = 252;
pub const _neoRADIO2frame_commands_NEORADIO2_COMMAND_ENTERBOOT: _neoRADIO2frame_commands = 255;
pub type _neoRADIO2frame_commands = ::std::os::raw::c_int;
pub use self::_neoRADIO2frame_commands as neoRADIO2frame_commands;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_SENSOR: _neoRADIO2frame_deviceStatus = 0;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_FIRMWARE: _neoRADIO2frame_deviceStatus = 1;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_IDENTIFY: _neoRADIO2frame_deviceStatus = 2;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_READ_SETTINGS:
    _neoRADIO2frame_deviceStatus = 3;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_WRITE_SETTINGS:
    _neoRADIO2frame_deviceStatus = 4;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_READ_PCBSN: _neoRADIO2frame_deviceStatus =
    5;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_CAL: _neoRADIO2frame_deviceStatus = 6;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_CAL_STORE: _neoRADIO2frame_deviceStatus = 7;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_CAL_INFO: _neoRADIO2frame_deviceStatus = 8;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_CALPOINTS: _neoRADIO2frame_deviceStatus = 9;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_PERF_STATS: _neoRADIO2frame_deviceStatus =
    16;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_SETBAUD: _neoRADIO2frame_deviceStatus = 10;
pub const _neoRADIO2frame_deviceStatus_NEORADIO2_STATUS_NEED_ID: _neoRADIO2frame_deviceStatus = 255;
pub type _neoRADIO2frame_deviceStatus = ::std::os::raw::c_int;
pub use self::_neoRADIO2frame_deviceStatus as neoRADIO2frame_deviceStatus;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct _neoRADIO2_deviceSettings {
    pub poll_rate_ms: u32,
    pub channel_1_config: u32,
    pub channel_2_config: u32,
    pub channel_3_config: u32,
}
pub type neoRADIO2_deviceSettings = _neoRADIO2_deviceSettings;
pub const _neoRADIO2states_NEORADIO2STATE_RUNNING: _neoRADIO2states = 0;
pub const _neoRADIO2states_NEORADIO2STATE_INBOOTLOADER: _neoRADIO2states = 1;
pub type _neoRADIO2states = ::std::os::raw::c_int;
pub use self::_neoRADIO2states as neoRADIO2states;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _neoRADIO2frame_calHeader {
    pub num_of_pts: u8,
    pub channel: u8,
    pub range: u8,
    pub cal_is_valid: u8,
}
pub type neoRADIO2frame_calHeader = _neoRADIO2frame_calHeader;
pub const _neoRADIO2CalType_NEORADIO2CALTYPE_ENABLED: _neoRADIO2CalType = 0;
pub const _neoRADIO2CalType_NEORADIO2CALTYPE_NOCAL: _neoRADIO2CalType = 1;
pub const _neoRADIO2CalType_NEORADIO2CALTYPE_NOCAL_ENHANCED: _neoRADIO2CalType = 2;
pub type _neoRADIO2CalType = ::std::os::raw::c_int;
pub use self::_neoRADIO2CalType as neoRADIO2CalType;
pub const _neoRADIO2_CANMsgType_NEORADIO2_CANMSGTYPE_SID_CLASSIC: _neoRADIO2_CANMsgType = 0;
pub const _neoRADIO2_CANMsgType_NEORADIO2_CANMSGTYPE_XID_CLASSIC: _neoRADIO2_CANMsgType = 1;
pub const _neoRADIO2_CANMsgType_NEORADIO2_CANMSGTYPE_SID_FD: _neoRADIO2_CANMsgType = 2;
pub const _neoRADIO2_CANMsgType_NEORADIO2_CANMSGTYPE_XID_FD: _neoRADIO2_CANMsgType = 3;
pub type _neoRADIO2_CANMsgType = ::std::os::raw::c_int;
pub use self::_neoRADIO2_CANMsgType as neoRADIO2_CANMsgType;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct _neoRADIO2settings_CAN {
    pub Arbid: u32,
    pub Location: u8,
    pub msgType: u8,
}
pub type neoRADIO2settings_CAN = _neoRADIO2settings_CAN;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct _neoRADIO2settings_ChannelName {
    pub length: u8,
    pub charSize: u8,
    pub chars: _neoRADIO2settings_ChannelName__bindgen_ty_1,
}
#[repr(C, packed)]
#[derive(Copy, Clone)]
pub union _neoRADIO2settings_ChannelName__bindgen_ty_1 {
    pub u32_: [u32; 16usize],
    pub u16_: [u16; 32usize],
    pub u8_: [u8; 64usize],
}
pub type neoRADIO2Settings_ChannelName = _neoRADIO2settings_ChannelName;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct _neoRADIO2_settings {
    pub config: neoRADIO2_deviceSettings,
    pub name1: neoRADIO2Settings_ChannelName,
    pub name2: neoRADIO2Settings_ChannelName,
    pub name3: neoRADIO2Settings_ChannelName,
    pub can: neoRADIO2settings_CAN,
}
pub type neoRADIO2_settings = _neoRADIO2_settings;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _neoRADIO2_SettingsPart {
    pub part: u8,
    pub data: [u8; 32usize],
}
